edited legend name based on the documetnation

--- a/src/lecturerDashboard.html
+++ b/src/lecturerDashboard.html
@@ -34,10 +34,10 @@
             </select>
             <div class ="pie"></div>
             <div class = "pie-legend">
-                    <div><span class="legend-colour" style="background: orange;"></span> Journal (25%)</div>
-                    <div><span class="legend-colour" style="background: red;"></span> Conference (15%)</div>
-                    <div><span class="legend-colour" style="background: green;"></span> Book Chapter (25%)</div>
-                    <div><span class="legend-colour" style="background: #2288cc;"></span> Others (35%)</div>
+                    <div><span class="legend-colour" style="background: orange;"></span> Book (25%)</div>
+                    <div><span class="legend-colour" style="background: red;"></span> Thesis/Dissertation (15%)</div>
+                    <div><span class="legend-colour" style="background: green;"></span> Conference Paper (25%)</div>
+                    <div><span class="legend-colour" style="background: #2288cc;"></span> Journal/Article (35%)</div>
             </div>  
         </div>
     </div>
