--- a/src/html/lecturerStudent/tracking_status.html
+++ b/src/html/lecturerStudent/tracking_status.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('home.html')">&#8962;</span>
+        <span class="icon" onclick="navigateTo('../mainScreens/home.html')">&#8962;</span>
         <span class="header-title">Tracking Requests</span>
         <div class="search-container">
             <input type="text" placeholder="Search">
@@ -23,10 +23,10 @@
             </div>
             <div style="display: flex; gap: 10px; align-items: center;">
                 <button class="btn btn-red">X</button>
-                <div class="status-arrow" style="background: #112255; width: 100px; cursor: pointer;" onclick="navigateTo('review_detail.html')">Review</div>
+                <div class="status-arrow" style="background: #112255; width: 100px; cursor: pointer;" onclick="navigateTo('../coordinator/review_detail.html')">Review</div>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
