--- a/src/html/mainScreens/home.html
+++ b/src/html/mainScreens/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style/style.csss">
 </head>
 <body>
     <header>
@@ -16,8 +16,8 @@
             <span>&#128269;</span>
         </div>
         <br>
-        <button class="btn btn-blue" onclick="navigateTo('publicationresults.html')">Search</button>
+        <button class="btn btn-blue" onclick="navigateTo('./publicationresults.html')">Search</button>
     </div>
-    <script src="script.js"></script>
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
