--- a/src/html/mainScreens/login.html
+++ b/src/html/mainScreens/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 <body>
     <div class="login-container">
@@ -10,6 +10,6 @@
         <input type="password" class="login-input" placeholder="Password">
         <button class="btn btn-blue" onclick="navigateTo('home.html')" style="margin-top:20px; width: 330px;">ENTER</button>
     </div>
-    <script src="script.js"></script>
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
