--- a/src/html/coordinator/review_detail.html
+++ b/src/html/coordinator/review_detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style/style.css">
     <style>
         .review-grid { display: grid; grid-template-columns: 1fr 2fr; gap: 20px; padding: 20px; }
         .review-box { background: white; color: black; padding: 20px; border-radius: 10px; height: 150px; }
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('tracking_status.html')">&#8962;</span>
+        <span class="icon" onclick="navigateTo('../lecturerStudent/tracking_status.html')">&#8962;</span>
         <span class="header-title">Review Tracking Request</span>
         <span class="icon">&#128100;</span>
     </header>
@@ -41,6 +41,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
