--- a/src/html/lecturerStudent/lecturerDashboard.html
+++ b/src/html/lecturerStudent/lecturerDashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 <body>
     <header>
@@ -43,7 +43,7 @@
     </div>
    
     
-    <script src="script.js"></script>
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
 
