--- a/src/html/mainScreens/bookmarks.html
+++ b/src/html/mainScreens/bookmarks.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('home.html')">&#8962;</span>
+        <span class="icon" onclick="navigateTo('./home.html')">&#8962;</span>
         <span class="header-title">Bookmarks</span>
         <div class="search-container" style="width: 200px;">
             <input type="text" placeholder="Search">
@@ -37,6 +37,6 @@
             <div class="icon-bookmark filled" title="Unsave"></div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
