--- a/src/html/mainScreens/publicationresults.html
+++ b/src/html/mainScreens/publicationresults.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 <body>
     <header>
@@ -51,6 +51,6 @@
         </div>
     </div>
     
-    <script src="script.js"></script>
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
