--- a/src/html/mainScreens/status.html
+++ b/src/html/mainScreens/status.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style/style.css">
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('home.html')">&#8962;</span>
+        <span class="icon" onclick="navigateTo('./home.html')">&#8962;</span>
         <span class="header-title">Status</span>
         <div class="search-container">
             <input type="text" placeholder="Search">
@@ -55,6 +55,6 @@
             <div class="status-arrow st-rejected">Rejected</div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../../scripts/script.js"></script>
 </body>
 </html>
