made user management page

--- a/src/html/admin/viewPublications.html
+++ b/src/html/admin/viewPublications.html
@@ -2,14 +2,12 @@
 <html>
 <head>
     <link rel="stylesheet" href="../../style/style.css">
+    <script src="../../scripts/script.js" async></script>
 </head>
 <body>
     <header>
         <span class="icon" onclick="navigateTo('home.html')">&#8962;</span>
-        <div class="search-container">
-            <input type="text" placeholder="Search" value="Science">
-            <span>&#128269;</span>
-        </div>
+        <option>Admin</option><option>Admin</option>
         <span class="icon">&#128100;</span>
     </header>
 
@@ -50,7 +48,5 @@
             <div class="status-arrow st-rejected">Remove</div>
         </div>
     </div>
-    
-    <script src="../../scripts/script.js"></script>
 </body>
 </html>
