add titles to admin pages

--- a/src/html/admin/dashboard.html
+++ b/src/html/admin/dashboard.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Dashboard</title>
         <link rel="stylesheet" href="../../style/style.css">
         <script src="../../scripts/script.js" async></script>
     </head>
