--- a/src/html/admin/home.html
+++ b/src/html/admin/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Home</title>
     <link rel="stylesheet" href="../../style/style.css">
     <script src="../../scripts/adminScript.js"></script>
 </head>
