fixed issue with navigation

--- a/src/html/admin/viewPublications.html
+++ b/src/html/admin/viewPublications.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('home.html')">&#8962;</span>
+        <span class="icon" onclick="navigateTo('../admin/home.html')">&#8962;</span>
         <option>Admin</option><option>Admin</option>
         <span class="icon">&#128100;</span>
     </header>
