--- a/src/html/mainScreens/analytics.html
+++ b/src/html/mainScreens/analytics.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('./home.html')">&#8962;</span>
+        <span class="icon" onclick="navigateTo('../mainScreens/home.html')">&#8962;</span>
         <span class="header-title">Analytics</span>
         <div style="display: flex; gap: 10px;">
             <button class="btn" style="background: #7a0f5a;">Faculty</button>
