--- a/src/html/mainScreens/publicationresults.html
+++ b/src/html/mainScreens/publicationresults.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('home.html')">&#8962;</span>
+        <span class="icon" onclick="navigateTo('../mainScreens/home.html')">&#8962;</span>
         <div class="search-container">
             <input type="text" placeholder="Search" value="Science">
             <span>&#128269;</span>
