--- a/src/html/lecturerStudent/lecturerDashboard.html
+++ b/src/html/lecturerStudent/lecturerDashboard.html
@@ -7,7 +7,7 @@
     <header>
         <span class="icon" onclick="toggleMenu()">&#9776;</span>
         <span class="header-title">Analytics</span>
-        <a href="lecturerDashboard.html" class="icon">&#128100;</a>
+        <a href="../lecturerStudent/lecturerDashboard.html" class="icon">&#128100;</a>
         
     </header>
     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; padding: 20px;">
