--- a/src/html/mainScreens/bookmarks.html
+++ b/src/html/mainScreens/bookmarks.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <span class="icon" onclick="navigateTo('./home.html')">&#8962;</span>
+        <span class="icon" onclick="navigateTo('../mainScreens/home.html')">&#8962;</span>
         <span class="header-title">Bookmarks</span>
         <div class="search-container" style="width: 200px;">
             <input type="text" placeholder="Search">
