--- a/src/html/mainScreens/home.html
+++ b/src/html/mainScreens/home.html
@@ -6,7 +6,7 @@
 <body>
     <header>
         <span class="icon" onclick="toggleMenu()">&#9776;</span>
-        <a href="login.html" class="icon">&#128100;</a>
+        <a href="../mainScreens/login.html" class="icon">&#128100;</a>
     </header>
     <div class="login-container" style="justify-content: flex-start; padding-top: 100px;">
         <h1>Publications</h1>
@@ -16,7 +16,7 @@
             <span>&#128269;</span>
         </div>
         <br>
-        <button class="btn btn-blue" onclick="navigateTo('./publicationresults.html')">Search</button>
+        <button class="btn btn-blue" onclick="navigateTo('../mainScreens/publicationresults.html')">Search</button>
     </div>
     <script src="../../scripts/script.js"></script>
 </body>
