--- a/src/html/mainScreens/login.html
+++ b/src/html/mainScreens/login.html
@@ -8,7 +8,7 @@
         <h1>Login</h1>
         <input type="text" class="login-input" placeholder="UserID">
         <input type="password" class="login-input" placeholder="Password">
-        <button class="btn btn-blue" onclick="navigateTo('home.html')" style="margin-top:20px; width: 330px;">ENTER</button>
+        <button class="btn btn-blue" onclick="navigateTo('../mainScreens/home.html')" style="margin-top:20px; width: 330px;">ENTER</button>
     </div>
     <script src="../../scripts/script.js"></script>
 </body>
