--- a/src/html/admin/trackingRequests.html
+++ b/src/html/admin/trackingRequests.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Search</title>
+    <title>Requests</title>
     <link rel="stylesheet" href="../../style/style.css">
     <script src="../../scripts/script.js" async></script>
 </head>
 <body>
     <header>
         <span class="icon" onclick="navigateTo('../admin/home.html')">&#8962;</span>
+        <span class="header-title">Requests</span>
         <div class="search-container" style="width: 500px;">
             <span style="font-weight: bold;">Search...</span>
             <input type="text">
@@ -39,7 +40,10 @@
                 <p>Author: Sanjeevan</p>
                 <p>2026, Type</p>
             </div>
-            <div class="status-arrow st-rejected">Remove</div>
+            <div style="display: flex; gap: 8px; align-items: center;">
+                <button class="btn btn-red">X</button>
+                <div class="status-arrow st-review">Review</div>
+            </div>
         </div>
 
         <div class="list-item">
@@ -50,7 +54,10 @@
                 <p>Author: Harvind</p>
                 <p>2026, Type</p>
             </div>
-            <div class="status-arrow st-rejected">Remove</div>
+            <div style="display: flex; gap: 8px; align-items: center;">
+                <button class="btn btn-red">X</button>
+                <div class="status-arrow st-review">Review</div>
+            </div>
         </div>
     </div>
 </body>
